<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/signup_consumer_parent"
    android:theme="@style/Theme.DealRunner">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumer_first_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="@android:color/transparent"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consumerFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="164dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/hint_first_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColorHint="?colorOnPrimary"
                    app:boxBackgroundColor="?colorPrimaryVariant"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumer_last_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="@android:color/transparent"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/consumer_first_name_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/consumer_first_name_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/consumer_first_name_text_input_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consumerLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/hint_last_name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="?colorOnPrimary"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumer_email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxStrokeColor="@android:color/transparent"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/consumer_last_name_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/consumer_last_name_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/consumer_last_name_text_input_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consumerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="?colorOnPrimary"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/consumer_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="@android:color/transparent"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/consumer_email_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@id/consumer_email_text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/consumer_email_text_input_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consumerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="?colorOnPrimary"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                app:passwordToggleEnabled="true"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:textColorHint="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@+id/consumer_password_text_input_layout"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/consumer_password_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/consumer_password_text_input_layout" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/consumerConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/signup_field_bg"
                    android:ems="10"
                    android:fontFamily="@font/suezone_regular"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textColorHint="?colorOnPrimary"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/agreement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/t_and_c"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/confirm_password_text_input_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/confirm_password_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_text_input_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/consumerSignUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/signup_button_bg"
                android:fontFamily="@font/suezone_regular"
                android:text="@string/button_text_singup"
                android:textAllCaps="false"
                android:textColor="@color/white_rock"
                app:layout_constraintEnd_toEndOf="@+id/agreement"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/agreement"
                app:layout_constraintTop_toBottomOf="@+id/agreement" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/consumerSignUpButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/consumerSignUpButton"
                app:layout_constraintTop_toBottomOf="@+id/consumerSignUpButton">

                <TextView
                    android:id="@+id/consumerAccountAlreadyExists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/existing_account"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/consumerLogInButton"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white"
                    android:elevation="0dp"
                    android:stateListAnimator="@null"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#FFC107" />
            </LinearLayout>

            <ImageView
                android:visibility="visible"
                android:id="@+id/imageView"
                android:layout_width="182dp"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_logo_blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
