...
            android:text="@string/i_want_to"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/grab_deals_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
...
