...
            android:stateListAnimator="@null"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:insetTop="0dp"
...
